# yolo-cage

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  REFACTORING_COMPLETE.md  Vagrantfile  config.env.example  config.yaml.example  deploy.sh  pyproject.toml
.github/workflows/: release.yml
dispatcher/: __init__.py  app.py  bootstrap.py  clone.py  commands.py  config.py  gh.py  gh_commands.py  git.py  hooks.py  main.py  models.py  paths.py  pods.py  policy.py  registry.py  requirements-dev.txt  requirements.txt  responses.py  sync.py
dispatcher/handlers/: __init__.py  gh.py  git.py
dispatcher/tests/: test_app_gh.py  test_bootstrap.py  test_clone.py  test_commands.py  test_gh.py  test_hooks.py  (+3 more)
docs/: agentic-escape-prompt.md  architecture.md  configuration.md  customization.md  domain-model-analysis.md  escape-testing.md  glossary.md  integration-testing.md  security-audit.md  setup.md
manifests/: config.example.yaml  namespace.yaml
proxy/: addon.py  policy.py
scripts/: build-release.sh  build-zipapp.sh  gh-shim  git-shim  init-workspace  test-prereq-cleanup.sh  thread  thread.first-turn.txt.example  yolo-cage  yolo-cage-configure  yolo-cage-escape-test  yolo-cage-init  yolo-cage-inner  yolo-cage-vm
tests/: __init__.py  conftest.py  test_config.py  test_github.py  test_instance.py  test_instances.py  test_output.py  test_prerequisites.py  test_registry.py
yolo_cage/: __init__.py  __main__.py  cli.py  config.py  errors.py  github.py  instance.py  instances.py  output.py  prerequisites.py  registry.py  services.py  vm.py
(+80 files in other folders)
