[project]
name = "yolo-cage"
dynamic = ["version"]
description = "Sandboxed Claude Code agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
yolo-cage = "yolo_cage.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "yolo_cage.__version__"}

[tool.setuptools.packages.find]
include = ["yolo_cage*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"
